ros2_tutorial_workspace/log/build_2024-10-18_14-28-35/custom_publisher_package/stderr.log
  File "/home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package/custom_publisher_node.py", line 1
    import String from example_interfaces.msg
                  ^^^^
SyntaxError: invalid syntax

